load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@rules_distroless//distroless:defs.bzl", "flatten")
load("@tar.bzl", "mutate", "tar")
load("//bazel:common.bzl", "CODE_COVERAGE_CPPFLAGS", "CODE_COVERAGE_CXXFLAGS", "CODE_COVERAGE_LIBS", "CXXFLAGS_COMMON", "DBGFLAGS")
load("//bazel:packaging.bzl", "mtree_from_lines")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_headers",
    srcs = glob(["*.h"]),
)

CFLAGS_COMMON = [
    "-fPIC",
    "-pipe",
    "-Wall",
    "-Wcast-align",
    "-Wcast-qual",
    "-Wconversion",
    "-Wdisabled-optimization",
    "-Werror",
    "-Wextra",
    "-Wfloat-equal",
    "-Wformat=2",
    "-Wformat-nonliteral",
    "-Wformat-security",
    "-Wformat-y2k",
    "-Wimport",
    "-Winit-self",
    "-Wno-inline",
    "-Winvalid-pch",
    "-Wmissing-field-initializers",
    "-Wmissing-format-attribute",
    "-Wmissing-include-dirs",
    "-Wmissing-noreturn",
    "-Wno-aggregate-return",
    "-Wno-padded",
    "-Wno-switch-enum",
    "-Wno-unused-parameter",
    "-Wpacked",
    "-Wpointer-arith",
    "-Wredundant-decls",
    "-Wshadow",
    "-Wstack-protector",
    "-Wstrict-aliasing=3",
    "-Wswitch",
    "-Wswitch-default",
    "-Wunreachable-code",
    "-Wunused",
    "-Wvariadic-macros",
    "-Wwrite-strings",
    "-Wno-switch-default",
    "-Wconversion",
    "-Wno-psabi",
    "-Wcast-align=strict",
]

AM_CFLAGS = ["-fPIC"] + CFLAGS_COMMON

AM_CXXFLAGS = []  # Note: All of these are handled in the targets

cc_library(
    name = "saivs.a",
    srcs = [
        "Buffer.cpp",
        "Context.cpp",
        "ContextConfig.cpp",
        "ContextConfigContainer.cpp",
        "CorePortIndexMap.cpp",
        "CorePortIndexMapContainer.cpp",
        "CorePortIndexMapFileParser.cpp",
        "Event.cpp",
        "EventPayloadNetLinkMsg.cpp",
        "EventPayloadNotification.cpp",
        "EventPayloadPacket.cpp",
        "EventQueue.cpp",
        "FdbInfo.cpp",
        "HostInterfaceInfo.cpp",
        "LaneMap.cpp",
        "LaneMapContainer.cpp",
        "LaneMapFileParser.cpp",
        "MACsecAttr.cpp",
        "MACsecEgressFilter.cpp",
        "MACsecFilter.cpp",
        "MACsecFilterStateGuard.cpp",
        "MACsecForwarder.cpp",
        "MACsecIngressFilter.cpp",
        "MACsecManager.cpp",
        "NetMsgRegistrar.cpp",
        "RealObjectIdManager.cpp",
        "ResourceLimiter.cpp",
        "ResourceLimiterContainer.cpp",
        "ResourceLimiterParser.cpp",
        "Sai.cpp",
        "SaiAttrWrap.cpp",
        "SaiEventQueue.cpp",
        "SaiFdbAging.cpp",
        "SaiUnittests.cpp",
        "SelectableFd.cpp",
        "Signal.cpp",
        "Switch.cpp",
        "SwitchBCM56850.cpp",
        "SwitchBCM56971B0.cpp",
        "SwitchBCM81724.cpp",
        "SwitchConfig.cpp",
        "SwitchConfigContainer.cpp",
        "SwitchContainer.cpp",
        "SwitchMLNX2700.cpp",
        "SwitchNvdaMBF2H536C.cpp",
        "SwitchState.cpp",
        "SwitchStateBase.cpp",
        "SwitchStateBaseFdb.cpp",
        "SwitchStateBaseHostif.cpp",
        "SwitchStateBaseMACsec.cpp",
        "TrafficFilterPipes.cpp",
        "TrafficForwarder.cpp",
        "VirtualSwitchSaiInterface.cpp",
        "VirtualSwitchSaiInterfaceFdb.cpp",
        "VirtualSwitchSaiInterfacePort.cpp",
        "//:swss_common_headers",
    ],
    hdrs = [
        ":all_headers",
    ],
    copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CPPFLAGS,
    cxxopts = CODE_COVERAGE_CPPFLAGS,
    deps = [
        "//lib:libsairedis",
        "//meta:libsaimeta",
        "//meta:libsaimetadata",
        "@bookworm//libboost-dev:libboost",
        "@bookworm//libhiredis-dev:libhiredis",
        "@bookworm//nlohmann-json3-dev:nlohmann-json3",
    ],
)

cc_library(
    name = "libsaivs",
    srcs = [
        "sai_vs_acl.cpp",
        "sai_vs_ars.cpp",
        "sai_vs_ars_profile.cpp",
        "sai_vs_bfd.cpp",
        "sai_vs_bmtor.cpp",
        "sai_vs_bridge.cpp",
        "sai_vs_buffer.cpp",
        "sai_vs_counter.cpp",
        "sai_vs_dash_acl.cpp",
        "sai_vs_dash_direction_lookup.cpp",
        "sai_vs_dash_eni.cpp",
        "sai_vs_dash_inbound_routing.cpp",
        "sai_vs_dash_meter.cpp",
        "sai_vs_dash_outbound_ca_to_pa.cpp",
        "sai_vs_dash_outbound_routing.cpp",
        "sai_vs_dash_pa_validation.cpp",
        "sai_vs_dash_vip.cpp",
        "sai_vs_dash_vnet.cpp",
        "sai_vs_debug_counter.cpp",
        "sai_vs_dtel.cpp",
        "sai_vs_fdb.cpp",
        "sai_vs_genericprogrammable.cpp",
        "sai_vs_hash.cpp",
        "sai_vs_hostif.cpp",
        "sai_vs_interfacequery.cpp",
        "sai_vs_ipmc.cpp",
        "sai_vs_ipmc_group.cpp",
        "sai_vs_ipsec.cpp",
        "sai_vs_isolation_group.cpp",
        "sai_vs_l2mc.cpp",
        "sai_vs_l2mcgroup.cpp",
        "sai_vs_lag.cpp",
        "sai_vs_macsec.cpp",
        "sai_vs_mcastfdb.cpp",
        "sai_vs_mirror.cpp",
        "sai_vs_mpls.cpp",
        "sai_vs_my_mac.cpp",
        "sai_vs_nat.cpp",
        "sai_vs_neighbor.cpp",
        "sai_vs_nexthop.cpp",
        "sai_vs_nexthopgroup.cpp",
        "sai_vs_poe.cpp",
        "sai_vs_policer.cpp",
        "sai_vs_port.cpp",
        "sai_vs_qosmap.cpp",
        "sai_vs_queue.cpp",
        "sai_vs_route.cpp",
        "sai_vs_router_interface.cpp",
        "sai_vs_rpfgroup.cpp",
        "sai_vs_samplepacket.cpp",
        "sai_vs_scheduler.cpp",
        "sai_vs_schedulergroup.cpp",
        "sai_vs_srv6.cpp",
        "sai_vs_stp.cpp",
        "sai_vs_switch.cpp",
        "sai_vs_system_port.cpp",
        "sai_vs_tam.cpp",
        "sai_vs_tunnel.cpp",
        "sai_vs_twamp.cpp",
        "sai_vs_udf.cpp",
        "sai_vs_virtual_router.cpp",
        "sai_vs_vlan.cpp",
        "sai_vs_wred.cpp",
    ],
    hdrs = [
        ":all_headers",
    ],
    copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
    cxxopts = CODE_COVERAGE_CPPFLAGS,
    deps = [
        ":saivs.a",
    ] + CODE_COVERAGE_LIBS,
)

# TODO(bazel-ready): Migrate to cc_shared_library
cc_binary(
    name = "libsaivs_shared",
    linkshared = True,
    linkstatic = True,
    deps = [":libsaivs"],
)

cc_test(
    name = "tests",
    srcs = ["tests.cpp"],
    copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON,
    deps = [
        ":libsaivs",
        "@sonic_swss_common//:libswsscommon",
    ],
)

# Because we don't want to name all the headers one by one in the mtree,
# we create a directory at the right path.
copy_to_directory(
    name = "deb_headers_directory",
    srcs = [
        "@sai//experimental:deb_headers",
        "@sai//inc:deb_headers",
    ],
    out = "usr/include/sai",
    include_external_repositories = ["sai*"],
)

mtree_from_lines(
    name = "libsaivs_pkg_x86_64_mtree",
    contents = [
        "./usr/lib/x86_64-linux-gnu/libsaivs.so type=file contents=$(location :libsaivs_shared)",
        "./usr/lib/x86_64-linux-gnu/libsaivs.so.0 type=link link=./usr/lib/x86_64-linux-gnu/libsaivs.so",
    ],
    data = [":libsaivs_shared"],
)

tar(
    name = "libsaivs_pkg",
    srcs = [":libsaivs_shared"],
    mtree = select({
        "@platforms//cpu:x86_64": ":libsaivs_pkg_x86_64_mtree",
        "//conditions:default": "@platforms//:incompatible",
    }),
    visibility = ["//visibility:public"],
)

tar(
    name = "libsaivs_dev_files",
    srcs = [
        ":deb_headers_directory",
        ":saivs.h",
    ],
    mutate = mutate(
        package_dir = ".",
        strip_prefix = package_name(),
    ),
)

flatten(
    name = "libsaivs_dev_pkg",
    tars = [
        ":libsaivs_dev_files",
        ":libsaivs_pkg",
    ],
    visibility = ["//visibility:public"],
)
