package(default_visibility = ["//visibility:public"])

load("//:common.bzl", "CXXFLAGS_COMMON", "CODE_COVERAGE_CPPFLAGS", "CODE_COVERAGE_CXXFLAGS", "DBGFLAGS", "CODE_COVERAGE_LIBS")
load("@bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@tar.bzl", "tar", "mutate")
load("@rules_distroless//distroless:defs.bzl", "flatten")

filegroup(
  name = "all_headers",
  srcs = glob(["*.h"]),
)

CFLAGS_COMMON = [
   "-fPIC",
   "-pipe",
   "-Wall",
   "-Wcast-align",
   "-Wcast-qual",
   "-Wconversion",
   "-Wdisabled-optimization",
   "-Werror",
   "-Wextra",
   "-Wfloat-equal",
   "-Wformat=2",
   "-Wformat-nonliteral",
   "-Wformat-security",
   "-Wformat-y2k",
   "-Wimport",
   "-Winit-self",
   "-Wno-inline",
   "-Winvalid-pch",
   "-Wmissing-field-initializers",
   "-Wmissing-format-attribute",
   "-Wmissing-include-dirs",
   "-Wmissing-noreturn",
   "-Wno-aggregate-return",
   "-Wno-padded",
   "-Wno-switch-enum",
   "-Wno-unused-parameter",
   "-Wpacked",
   "-Wpointer-arith",
   "-Wredundant-decls",
   "-Wshadow",
   "-Wstack-protector",
   "-Wstrict-aliasing=3",
   "-Wswitch",
   "-Wswitch-default",
   "-Wunreachable-code",
   "-Wunused",
   "-Wvariadic-macros",
   "-Wwrite-strings",
   "-Wno-switch-default",
   "-Wconversion",
   "-Wno-psabi",
   "-Wcast-align=strict",
]

AM_CFLAGS = ["-fPIC"] + CFLAGS_COMMON + ["-I."] # -I/usr/include/vpp_plugins $(SAIINC) -fPIC $(CFLAGS_COMMON) -I.
AM_CXXFLAGS = [] # All of these are handled in the targets $(SAIINC) -I$(top_srcdir)/lib -I/usr/include/libnl3

cc_library(
  name = "saivs.a",
  srcs = [
    "Buffer.cpp",
    "ContextConfigContainer.cpp",
    "ContextConfig.cpp",
    "Context.cpp",
    "CorePortIndexMapContainer.cpp",
    "CorePortIndexMap.cpp",
    "CorePortIndexMapFileParser.cpp",
    "Event.cpp",
    "EventPayloadNetLinkMsg.cpp",
    "EventPayloadNotification.cpp",
    "EventPayloadPacket.cpp",
    "EventQueue.cpp",
    "FdbInfo.cpp",
    "HostInterfaceInfo.cpp",
    "LaneMapContainer.cpp",
    "LaneMap.cpp",
    "LaneMapFileParser.cpp",
    "MACsecAttr.cpp",
    "MACsecFilterStateGuard.cpp",
    "MACsecEgressFilter.cpp",
    "MACsecFilter.cpp",
    "MACsecForwarder.cpp",
    "MACsecIngressFilter.cpp",
    "MACsecManager.cpp",
    "NetMsgRegistrar.cpp",
    "RealObjectIdManager.cpp",
    "ResourceLimiterContainer.cpp",
    "ResourceLimiter.cpp",
    "ResourceLimiterParser.cpp",
    "SaiAttrWrap.cpp",
    "Sai.cpp",
    "SaiEventQueue.cpp",
    "SaiFdbAging.cpp",
    "SaiUnittests.cpp",
    "SelectableFd.cpp",
    "Signal.cpp",
    "SwitchBCM56850.cpp",
    "SwitchBCM56971B0.cpp",
    "SwitchBCM81724.cpp",
    "SwitchConfigContainer.cpp",
    "SwitchConfig.cpp",
    "SwitchContainer.cpp",
    "Switch.cpp",
    "SwitchMLNX2700.cpp",
    "SwitchNvdaMBF2H536C.cpp",
    "SwitchStateBase.cpp",
    "SwitchStateBaseFdb.cpp",
    "SwitchStateBaseHostif.cpp",
    "SwitchStateBaseMACsec.cpp",
    "SwitchState.cpp",
    "TrafficFilterPipes.cpp",
    "TrafficForwarder.cpp",
    "VirtualSwitchSaiInterface.cpp",
    "VirtualSwitchSaiInterfaceFdb.cpp",
    "VirtualSwitchSaiInterfacePort.cpp",
    "//:swss_common_headers",
  ],
  hdrs = [
    ":all_headers",
  ],
  deps = [
    "@bookworm//libhiredis-dev:libhiredis",
    "@bookworm//libboost-dev:libboost",
    "@bookworm//nlohmann-json3-dev:nlohmann-json3",
    "//meta:libsaimeta",
    "//meta:libsaimetadata",
    "//lib:libsairedis",
  ],
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CPPFLAGS,
)

cc_library(
  name = "libsaivs",
  srcs = [
    "sai_vs_acl.cpp",
    "sai_vs_bfd.cpp",
    "sai_vs_bmtor.cpp",
    "sai_vs_bridge.cpp",
    "sai_vs_buffer.cpp",
    "sai_vs_counter.cpp",
    "sai_vs_dash_vip.cpp",
    "sai_vs_dash_pa_validation.cpp",
    "sai_vs_dash_vnet.cpp",
    "sai_vs_dash_outbound_routing.cpp",
    "sai_vs_dash_outbound_ca_to_pa.cpp",
    "sai_vs_dash_inbound_routing.cpp",
    "sai_vs_dash_eni.cpp",
    "sai_vs_dash_direction_lookup.cpp",
    "sai_vs_dash_acl.cpp",
    "sai_vs_debug_counter.cpp",
    "sai_vs_dtel.cpp",
    "sai_vs_fdb.cpp",
    "sai_vs_genericprogrammable.cpp",
    "sai_vs_hash.cpp",
    "sai_vs_hostif.cpp",
    "sai_vs_interfacequery.cpp",
    "sai_vs_ipmc.cpp",
    "sai_vs_ipmc_group.cpp",
    "sai_vs_isolation_group.cpp",
    "sai_vs_l2mc.cpp",
    "sai_vs_l2mcgroup.cpp",
    "sai_vs_lag.cpp",
    "sai_vs_macsec.cpp",
    "sai_vs_mcastfdb.cpp",
    "sai_vs_mirror.cpp",
    "sai_vs_mpls.cpp",
    "sai_vs_nat.cpp",
    "sai_vs_neighbor.cpp",
    "sai_vs_nexthop.cpp",
    "sai_vs_nexthopgroup.cpp",
    "sai_vs_policer.cpp",
    "sai_vs_port.cpp",
    "sai_vs_qosmap.cpp",
    "sai_vs_queue.cpp",
    "sai_vs_route.cpp",
    "sai_vs_router_interface.cpp",
    "sai_vs_rpfgroup.cpp",
    "sai_vs_samplepacket.cpp",
    "sai_vs_scheduler.cpp",
    "sai_vs_schedulergroup.cpp",
    "sai_vs_srv6.cpp",
    "sai_vs_stp.cpp",
    "sai_vs_switch.cpp",
    "sai_vs_system_port.cpp",
    "sai_vs_tam.cpp",
    "sai_vs_tunnel.cpp",
    "sai_vs_udf.cpp",
    "sai_vs_virtual_router.cpp",
    "sai_vs_vlan.cpp",
    "sai_vs_wred.cpp",
    "sai_vs_my_mac.cpp",
    "sai_vs_ipsec.cpp",
    "sai_vs_ars.cpp",
    "sai_vs_ars_profile.cpp",
    "sai_vs_twamp.cpp",
    "sai_vs_poe.cpp",
    "sai_vs_dash_meter.cpp",
  ],
  hdrs = [
    ":all_headers",
  ],
  deps = [
    ":saivs.a",
  ] + CODE_COVERAGE_LIBS,
  cxxopts = CODE_COVERAGE_CPPFLAGS,
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON + CODE_COVERAGE_CXXFLAGS,
)

# TODO BL: Migrate to cc_binary
# cc_shared_library(
cc_binary(
  name = "libsaivs_shared",
  deps = [":libsaivs"],
  linkstatic = True,
  linkshared = True,
)

cc_test(
  name = "tests",
  srcs = ["tests.cpp"],
  deps = [
    ":libsaivs",
    "@sonic_swss_common//:libswsscommon",
  ],
  copts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON,
)

# Because we don't want to name all the headers one by one in the mtree,
# we create a directory at the right path.
copy_to_directory(
  name = "deb_headers_directory",
  out = "usr/include/sai",
  srcs = [
    "@sai//inc:deb_headers",
    "@sai//experimental:deb_headers",
  ],
  include_external_repositories = ["sai*"],
)

tar(
  name = "libsaivs_pkg",
  srcs = [":libsaivs_shared"],
  mtree = [
    # TODO BL: Parameterize based on target platform
    "./usr/lib/x86_64-linux-gnu/libsaivs.so type=file contents=$(location :libsaivs_shared)",
    "./usr/lib/x86_64-linux-gnu/libsaivs.so.0 type=link link=./usr/lib/x86_64-linux-gnu/libsaivs.so",
  ],
  visibility = ["//visibility:public"],
)

tar(
  name = "libsaivs_dev_files",
  srcs = [
    ":deb_headers_directory",
    ":saivs.h",
  ],
  mutate = mutate(
    strip_prefix = package_name(),
    package_dir = ".",
  ),
)

flatten(
  name = "libsaivs_dev_pkg",
  tars = [
    ":libsaivs_dev_files",
    ":libsaivs_pkg",
  ],
  visibility = ["//visibility:public"],
)
