# TODO BL: trim these loads
load("//:common.bzl", "DBGFLAGS", "CODE_COVERAGE_LIBS", "CXXFLAGS_COMMON")

AM_CXXFLAGS = [] #$(SAIINC) -I$(top_srcdir)/syncd -I$(top_srcdir)/lib -I$(top_srcdir)/vslib

cc_test(
  name = "tests",
  srcs = glob([
    "*.cpp",
    "*.h",
  ]),
  data = glob([
    "brcm/*.ini",
    "mlnx/*.ini",
    "nvda-bf/*.ini",
  ]),
  includes = [".."], # We need this to inlude raw headers from syncd, but there has to be a better way
  cxxopts = DBGFLAGS + AM_CXXFLAGS + CXXFLAGS_COMMON,
  deps = [
    "//syncd:libsyncd",
    "//syncd:libsyncd_request_shutdown",
    "//meta:saimeta",
    "//vslib:libsaivs",
    "@sonic_swss_common//:libswsscommon",
    "@com_google_googletest//:gtest",
    "@com_google_googletest//:gtest_main",
  ] + CODE_COVERAGE_LIBS,
)
